--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
